Project has finished and ready to review

--- a/team.html
+++ b/team.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
-        <div class="page-top container d-flex justify-content-between">
+    <div class="page-top d-none d-lg-block container-fluid bg-dark-blue py-2">
+        <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
-            <div class="page-top-connect d-flex align-items-center">
+            <div class="page-top-social d-flex align-items-center">
                 <a href="#" class="text-decoration-none text-light-blue d-flex align-items-center">
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="team-header px-0">
+    <section class="team-header px-3">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
             <div class="container p-0">
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class='col-md-6'>
                     <p class="text-white fw-bold">Senior team</p>
-                    <h2 class="header-content-heading text-light-blue fw-bold mb-4">
+                    <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
                         Pullquote from the page
                         <br class="d-xs-block d-md-none" />
                         can go in this space
@@ -86,20 +86,31 @@
     </section>
     <!-- Section Header end  -->
     <!-- Section team card  -->
-    <section class="py-4 py-md-5 px-3">
-        <div class="container">
+    <section class="py-4 py-md-5 px-3 team-card">
+        <div class="container p-0">
             <div class="row">
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-lg-4 mb-4 mb-lg-0">
                     <div class="card border-0">
-                        <img src="./assets/Team portraits/Andrew_portrait.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-blue fw-bold">Andrew Geidans</h5>
-                            <p class="card-text text-blue">
+                        <div class="card-top">
+                            <img src="./assets/Teamportraits/Andrew_portrait.png" class="card-top-img w-100 h-100"
+                                alt="...">
+                            <div class="card-top-overlay-1 card-top-overlay">
+                                <p class="text-white fw-bolder text-center">
+                                    Technology is my hobby as well as my business. I just love it.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card-body text-center text-lg-start ps-lg-0">
+                            <h5 class="card-title text-blue fw-bold mb-0">Andrew Geidans</h5>
+                            <p class="card-text text-blue mb-0 lh-1">
                                 Founder and MD,
                                 <br>
                                 Technical Consultant
                             </p>
-                            <a href="#" class="btn">
+                            <p class="fw-bolder text-blue d-block d-lg-none lh-1 mb-0">
+                                Technology is my hobby as well as my business. I just love it.
+                            </p>
+                            <a href="#" class="btn px-0">
                                 <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
                                     <i class="fab fa-linkedin-in"></i>
                                 </span>
@@ -107,16 +118,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <div class="card border-0 position-relative">
-                        <img src="./assets/Team portraits/Jana_portrait.png" class="card-img-top" alt="...">
-                        <div class="card-image-top-over"></div>
-                        <div class="card-body">
-                            <h5 class="card-title text-blue fw-bold">Jana Zaragotska</h5>
-                            <p class="card-text text-blue">
+                <div class="col-12 col-lg-4 mb-4 mb-lg-0">
+                    <div class="card border-0">
+                        <div class="card-top">
+                            <img src="./assets/Teamportraits/Jana_portrait.png" class="card-top-img h-100 w-100"
+                                alt="...">
+                            <div class="card-top-overlay-2 card-top-overlay text-center">
+                                <p class="text-white fw-bolder">
+                                    Jana makes everything work better
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="card-body ps-lg-0 text-center text-lg-start">
+                            <h5 class="card-title text-blue fw-bold mb-0">Jana Zaragotska</h5>
+                            <p class="card-text text-blue mb-0 lh-1">
                                 Operations Director
                             </p>
-                            <a href="#" class="btn">
+                            <p class="fw-bolder text-blue d-block d-lg-none mb-0">
+                                Jana makes everthing work better
+                            </p>
+                            <a href="#" class="btn px-0">
                                 <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
                                     <i class="fab fa-linkedin-in"></i>
                                 </span>
@@ -124,15 +146,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-lg-4">
                     <div class="card border-0">
-                        <img src="./assets/Team portraits/Pavel_portrait.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-blue fw-bold">Pavel Maksimov</h5>
-                            <p class="card-text text-blue">
+                        <div class="card-top">
+                            <img src="./assets/Teamportraits/Pavel_portrait.png" class="card-top-img w-100 h-100"
+                                alt="...">
+                            <div class="card-top-overlay-3 card-top-overlay">
+                                <p class="text-white fw-bolder">
+                                    The Geidans go-to guru for all technical and devlopment projects.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card-body ps-lg-0 text-center text-lg-start">
+                            <h5 class="card-title text-blue fw-bold mb-0">Pavel Maksimov</h5>
+                            <p class="card-text text-blue mb-0">
                                 Technical Director
                             </p>
-                            <a href="#" class="btn">
+                            <p class="fw-bolder text-blue d-block d-lg-none">
+                                The Geidans go-to guru for all technical and devlopment projects.
+                            </p>
+                            <a href="#" class="btn px-0">
                                 <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
                                     <i class="fab fa-linkedin-in"></i>
                                 </span>
@@ -245,13 +278,13 @@
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Privacy & GDPR
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Terms
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Legal Notice
                             </a>
                             <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
@@ -263,22 +296,8 @@
     </div>
     <!-- Section Copyright end -->
 
+    <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
