--- a/whyus.html
+++ b/whyus.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
-        <div class="page-top container d-flex justify-content-between">
+    <div class="page-top d-none d-lg-block container-fluid bg-dark-blue py-2">
+        <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
-            <div class="page-top-connect d-flex align-items-center">
+            <div class="page-top-social d-flex align-items-center">
                 <a href="#" class="text-decoration-none text-light-blue d-flex align-items-center">
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class='col-md-6'>
                     <p class="text-white fw-bold">Why us</p>
-                    <h2 class="header-content-heading text-light-blue fw-bold mb-4">
+                    <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
                         A Geidans Solutions
                         <br class="d-xs-block d-md-none" />
                         gets the best out of
@@ -85,18 +85,19 @@
         </div>
     </section>
     <!-- Section Header end  -->
+
     <!-- Section details start  -->
-    <section class="py-4 py-md-5">
+    <section class="py-0 py-md-5">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-8">
-                    <section class="px-3">
-                        <p class="text-blue fw-bold">
+                    <section class="px-3 py-4 py-md-0">
+                        <p class="text-blue fw-bolder">
                             When you're in a period of rapid growth, it can feel like
                             the business is controlling you, rather than the other way
                             around. Geidans Solutions puts you back in control
                         </p>
-                        <p class="text-blue fw-bold mb-4">
+                        <p class="text-blue fw-bolder mb-4">
                             What does control look like? Reduced costs, higher returns,
                             faster turnarounds and far better communication.
                         </p>
@@ -133,13 +134,13 @@
                         </p>
                     </section>
                 </div>
-                <div class="col-12 col-md-4 bg-orange">
-                    <section class="py-4 py-md-5 px-3  h-100">
-                        <div class="section-header d-flex align-items-top">
-                            <h2 class="fw-bold text-white mb-4">
-                                <span class="left-quote">"</span>
+                <div class="col-12 col-md-4 bg-orange ">
+                    <section class="section-review py-4 py-md-5 px-3 mb-0">
+                        <div class="fw-bold text-white d-flex flex-row flex-md-column mb-4">
+                            <h1 class="left-quote align-self-bottom">&#8220;</h1>
+                            <h2 class="section-review-heading ms-md-2 ">
                                 GS ynderstood our challenges
-                                straight away"
+                                straight away<span class="right-quote">&#8221;</span>
                             </h2>
                         </div>
                         <p class="text-blue fw-normal mb-4">
@@ -152,11 +153,12 @@
                             Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo
                             error
                             deleniti! Lorem ipsum dolor
-                        <div class="d-flex mb-3">
-                            <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                            <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                            <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                            <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                        </p>
+                        <div class="d-flex mb-4">
+                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
                             <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
                         </div>
                         <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
@@ -165,10 +167,8 @@
             </div>
         </div>
     </section>
-    <!-- Section Team end  -->
-    <!-- Section Review start -->
+    <!-- Section details start  -->
 
-    <!-- Section Review end -->
 
     <!-- Section Contact start -->
     <section class="section-contact py-4 py-md-5 px-3">
@@ -241,13 +241,13 @@
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Privacy & GDPR
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Terms
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Legal Notice
                             </a>
                             <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
@@ -259,22 +259,8 @@
     </div>
     <!-- Section Copyright end -->
 
+    <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
