--- a/contact.html
+++ b/contact.html
@@ -225,13 +225,13 @@
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Privacy & GDPR
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Terms
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
                                 Legal Notice
                             </a>
                             <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
@@ -243,22 +243,8 @@
     </div>
     <!-- Section Copyright end -->
 
+    <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
