--- a/home.html
+++ b/home.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
@@ -65,6 +64,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-uppercase text-white" href="team.html">team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-uppercase text-white" href="whyus.html">whyus</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -72,14 +77,14 @@
         <div class="header-content container text-white">
             <div class="row">
                 <div class='col-md-6'>
-                    <h1 class="header-content-heading fw-bold mb-4">
+                    <h2 class="header-content-heading lh-1 fw-bold mb-4">
                         Get the best
                         <br class="d-xs-block d-md-none" />
                         out of
                         <br class="d-xs-none d-md-block" />
                         your
                         <br class="d-xs-block d-md-none" /> business
-                    </h1>
+                    </h2>
                     <h6>Geidans Solutions</h6>
                     <h6>Now You Can.</h6>
                     <div class="mt-4 d-none d-md-block">
@@ -361,13 +366,13 @@
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block">
                                 Privacy & GDPR
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block">
                                 Terms
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block">
                                 Legal Notice
                             </a>
                             <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
@@ -379,22 +384,7 @@
     </div>
     <!-- Section Copyright end -->
 
-
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
+    <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
