--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
                     <span class="navbar-toggler-icon "></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
                         <li class="nav-item">
                             <a class="nav-link text-uppercase active text-white" aria-current="page"
                                 href="whatwedo.html">
