Home page and contact page is ready to review

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     <section class="py-4 py-md-5 px-3">
         <div class="container p-0">
             <div class="row">
-                <div class="col-12 col-md-4 text-left">
+                <div class="col-12 col-md-4 text-left mb-4">
                     <h2 class="text-blue fw-bold">
                         Geidans Solutions was found in 2000 at the turn of the new millennium
                     </h2>
